[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisent-plots"
version = "0.1.0"
description = "Create beautiful plots in Wisent brand styling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Wisent", email = "info@wisent.com"}
]
keywords = ["plotting", "visualization", "charts", "branding", "matplotlib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/wisent/wisent-plots"
Documentation = "https://github.com/wisent/wisent-plots#readme"
Repository = "https://github.com/wisent/wisent-plots"
Issues = "https://github.com/wisent/wisent-plots/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wisent_plots*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
